<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OldGamesActivity">

    <ListView
        android:id="@+id/lvGames"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:contentDescription="@string/back"
            android:onClick="back"
            android:scaleType="fitCenter"
            android:src="@drawable/back" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:text="@string/no_chosen"
        android:textSize="9pt"
        tools:ignore="RelativeOverlap" />

    <LinearLayout
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp">

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:contentDescription="@string/delete"
            android:onClick="delete"
            android:scaleType="fitCenter"
            android:src="@drawable/delete" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="15dp">

        <ImageButton
            android:id="@+id/btnCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:contentDescription="@string/copy"
            android:onClick="copySettings"
            android:scaleType="fitCenter"
            android:src="@drawable/copy" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="15dp">

        <ImageButton
            android:id="@+id/btnInventory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:contentDescription="@string/inventory"
            android:onClick="openInventory"
            android:scaleType="fitCenter"
            android:src="@drawable/inventory" />
    </LinearLayout>

</RelativeLayout>